frontend/scss/_slider.scss
.slidesjs
{
	position: relative;
	width: 100%;
	
	&-pagination
	{
		position: absolute;
		bottom: 0;
		width: 100%;
		z-index: 950;
		text-align: center;
		
		&-item
		{
			display: inline-block;
			
			a
			{
				display: block;
				height: 1rem;
				width: 5rem;
				line-height: 0;
				font-size: 0;
				border-top: 1px solid;
				border-color: color(chra)c;
				
				&.active
				{
					border-color: color(chrfg);
				}
			}
		}
		
	}
}

.slide
{
	@include ai-block;
}

